    + [JW] Add support for pkg.<srcpkg>.<anything> build profiles.
    + [JW] Demote tags for build-depends related to build profiles to
      pedantic, as the required packages are available in stable.
      Thanks to Helmut Grohne for the bug report.  (Closes: #831633)
    + [NT] Apply patch from Dylan Aïssi to tag r-bioc packages not in
      section "gnu-r".  (Closes: #839263)
  * checks/files.{desc,pm}:
    + [CL, NT] Tag usages of shell wildcard characters in file names.
      (Closes: #814326)
  * checks/init.d.{desc,pm}:
    + [CL, NT]: Emit a tag for initscripts that source the
      /lib/lsb/init-functions utility functions without declaring the
      corresponding dependency on lsb-base (>= 3.0-6).
      (Closes: #838997)
  * checks/shared-libs.desc:
    + [JW] Fix typos.
  * checks/testsuite.pm:
    + [JW] Apply patch from Sean Whitton to recognise autopkgtest-pkg-elpa
      as a valid value for the Testsuite field.  (Closes: #837801)

  * collection/hardening-info:
    + [NT] Removed.

  * data/fields/build-profiles:
    + [JW] Add new profiles: nogolang, nojava, noperl, nopython, noudeb.
  * data/fields/obsolete-packages:
    + [NT] Apply patch from Otto Kekäläinen to assist with the transition
      to the "default-mysql-*" packages.  (Closes: #838603)
  * data/files/js-libraries:
    + [BR] Apply patch from Jean-Michel Vourgère to add detection of
      libjs-jquery-migrate-1.  (Closes: #823627)
  * data/files/php-libraries:
    + [JW] Apply patch from Marcelo Jorge Vieira to update package name
      for php-gettext.  (Closes: #837502)
  * data/spelling/corrections:
    + [JW, PW] Add more corrections.

  * debian/control:
    + [NT] Drop dependencies on hardening-includes as we no longer need
      hardening-check.
  * debian/copyright:
    + [JW] Add Paul Wise.
    + [JW] Remove now-unneeded separate entry for spellintian.t.
    + [JW] Update copyright years.
    + [CL] Add Chris Lamb.

  * helpers/coll/hardening-info-helper:
    + [NT] Removed.