@@ -1303,3 +1303,18 @@ Info: This .dsc file contains no Checksum-Sha256 field and hence only
  Accordingly it can be fixed by simply rebuilding the source package
  with a more recent dpkg-source version, i.e. by uploading a new
  Debian release of the package.
+
+Tag: homepage-for-cran-package-not-canonical
+Severity: wishlist
+Certainty: certain
+Info: The Homepage field for this package points to an uncanonical CRAN URL.
+ Please update to use the current canonical URL instead. The canonical URL is
+ recommended for use in publications, etc., will always redirect to current
+ release version (or devel if package is not in release yet). For example, the
+ link for the package "foo" should be:
+ .
+  https://cran.r-project.org/package=foo
+ .
+ not:
+ .
+  https://cran.r-project.org/web/packages/foo/index.html
