@@ -1,0 +1,2 @@
+I: fields-cran-homepage source: homepage-for-cran-package-not-canonical https://cran.r-project.org/web/packages/foo/index.html
+I: fields-cran-homepage: homepage-for-cran-package-not-canonical https://cran.r-project.org/web/packages/foo/index.html
