@@ -38,6 +38,8 @@ lintian (2.5.48) UNRELEASED; urgency=low
       Thanks to Helmut Grohne for the bug report.  (Closes: #831633)
     + [NT] Apply patch from Dylan Aïssi to tag r-bioc packages not in
       section "gnu-r".  (Closes: #839263)
+    + [NT] Apply patch from Dylan Aïssi to tag non-canonical uses of
+      the cran homepage in the Homepage field.  (Closes: #839553)
   * checks/files.{desc,pm}:
     + [CL, NT] Tag usages of shell wildcard characters in file names.
       (Closes: #814326)
